--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,39 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:react/recommended", "plugin:jsx-a11y/recommended", "prettier"],
+  "plugins": ["react", "jsx-a11y"],
+  "rules": {
+    // 코드 일관성
+    "quotes": ["error", "single"], // 작은따옴표 사용
+    "semi": ["error", "always"], // 세미콜론 강제
+    "no-multiple-empty-lines": ["error", { "max": 1 }], // 빈 줄 제한
+    "indent": ["error", 4], // 들여쓰기 2칸
+    "eol-last": ["error", "always"], // 마지막 줄 공백 한 줄 유지
+
+    // 코드 품질
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }], // 사용하지 않는 변수 경고
+    "eqeqeq": ["error", "always"], // 엄격한 동등 비교 사용
+    "no-console": "warn", // console.log 경고
+    "no-debugger": "warn", // debugger 경고
+
+    // React 관련 규칙
+    "react/react-in-jsx-scope": "off", // Next.js에서는 React 자동 임포트되므로 끔
+    "react/prop-types": "off", // PropTypes 사용 안 할 경우 끔
+    "react/jsx-uses-react": "off", // React 17 이상에서는 필요 없음
+    "react/jsx-uses-vars": "error", // 사용되지 않는 변수 감지
+
+    // 접근성 규칙 (jsx-a11y)
+    "jsx-a11y/alt-text": "warn", // <img> 태그에 alt 속성 필요
+    "jsx-a11y/anchor-is-valid": "warn", // 유효하지 않은 링크 방지
+    "jsx-a11y/no-autofocus": "warn" // autoFocus 속성 제한
+  },
+  "settings": {
+    "react": {
+      "version": "detect" // React 버전을 자동 감지
+    }
+  },
+  "env": {
+    "browser": true, // 브라우저 환경
+    "node": true,    // Node.js 환경
+    "es6": true      // ES6 문법과 객체를 활성화
+  }
 }
