--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,12 @@
     // 접근성 규칙 (jsx-a11y)
     "jsx-a11y/alt-text": "warn", // <img> 태그에 alt 속성 필요
     "jsx-a11y/anchor-is-valid": "warn", // 유효하지 않은 링크 방지
-    "jsx-a11y/no-autofocus": "warn" // autoFocus 속성 제한
+    "jsx-a11y/no-autofocus": "warn", // autoFocus 속성 제한
+
+    // 클릭 이벤트 관련 경고 무시 todo: 추후에 변경
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   },
   "settings": {
     "react": {
